--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,32 +1,186 @@
+# Run as a unique, less privileged user for security reasons.
 user www-data;
-worker_processes 4;
+
+# Sets the worker threads to the number of CPU cores available in the system for
+# best performance. Should be > the number of CPU cores.
+worker_processes auto;
+
+# Maximum number of open files per worker process.
+worker_rlimit_nofile 8192;
+
+# The file storing the process ID of the main process
 pid /run/nginx.pid;
 
+include /etc/nginx/modules-enabled/*.conf;
+
+# Log errors and warnings to this file
+error_log /var/log/nginx/error.log warn;
+
+# Provides the configuration file context in which the directives that affect
+# connection processing are specified.
 events {
-  worker_connections 2048;
-  multi_accept on;
-  use epoll;
+	worker_connections 8000;
 }
 
+
 http {
+  # Hide Nginx version information.
   server_tokens off;
+  # Specify media (MIME) types for files
+  include /etc/nginx/mime.types
+  default_type application/octet-stream;
+ # Log access to this file
+  access_log /var/log/nginx/access.log;
+  # How long to allow each connection to stay idle.
+  keepalive_timeout 20s;
+
+  # Speed up file transfers by using `sendfile()` to copy directly between
   sendfile on;
+  # Don't send out partial frames; this increases throughput since TCP frames
   tcp_nopush on;
   tcp_nodelay on;
-  keepalive_timeout 15;
-  types_hash_max_size 2048;
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
-  access_log off;
-  error_log off;
+
+  # Enable gzip compression.
   gzip on;
-  gzip_disable "msie6";
+  gzip_disable "msie6"
+  gzip_comp_level 5;
+  gzip_min_length 256;
+  gzip_proxied any;
+  gzip_vary on;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+  gzip_types
+    application/atom+xml
+    application/geo+json
+    application/javascript
+    application/x-javascript
+    application/json
+    application/ld+json
+    application/manifest+json
+    application/rdf+xml
+    application/rss+xml
+    application/vnd.ms-fontobject
+    application/wasm
+    application/x-web-app-manifest+json
+    application/xhtml+xml
+    application/xml
+    font/eot
+    font/otf
+    font/ttf
+    image/bmp
+    image/svg+xml
+    text/cache-manifest
+    text/calendar
+    text/css
+    text/javascript
+    text/markdown
+    text/plain
+    text/xml
+    text/vcard
+    text/vnd.rim.location.xloc
+    text/vtt
+    text/x-component
+    text/x-cross-domain-policy;
+
+  # Specify file cache expiration.
+  map $sent_http_content_type $expires {
+    default                                 1M;
+
+    # No content
+    ""                                      off;
+
+    # CSS
+    ~*text/css                              1y;
+
+    # Data interchange
+    ~*application/atom\+xml                 1h;
+    ~*application/rdf\+xml                  1h;
+    ~*application/rss\+xml                  1h;
+
+    ~*application/json                      0;
+    ~*application/ld\+json                  0;
+    ~*application/schema\+json              0;
+    ~*application/geo\+json                 0;
+    ~*application/xml                       0;
+    ~*text/calendar                         0;
+    ~*text/xml                              0;
+
+    # Favicon (cannot be renamed!) and cursor images
+    ~*image/vnd.microsoft.icon              1w;
+    ~*image/x-icon                          1w;
+
+    # HTML
+    ~*text/html                             0;
+
+    # JavaScript
+    ~*application/javascript                1y;
+    ~*application/x-javascript              1y;
+    ~*text/javascript                       1y;
+
+    # Manifest files
+    ~*application/manifest\+json            1w;
+    ~*application/x-web-app-manifest\+json  0;
+    ~*text/cache-manifest                   0;
+
+    # Markdown
+    ~*text/markdown                         0;
+
+    # Media files
+    ~*audio/                                1M;
+    ~*image/                                1M;
+    ~*video/                                1M;
+
+    # WebAssembly
+    ~*application/wasm                      1y;
+
+    # Web fonts
+    ~*font/                                 1M;
+    ~*application/vnd.ms-fontobject         1M;
+    ~*application/x-font-ttf                1M;
+    ~*application/x-font-woff               1M;
+    ~*application/font-woff                 1M;
+    ~*application/font-woff2                1M;
+
+    # Other
+    ~*text/x-cross-domain-policy            1w;
+  }
+  expires $expires;
+
+  # Virtual Host Configs
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
-  open_file_cache max=100;
-  client_body_temp_path /tmp 1 2;
-  client_body_buffer_size 256k;
-  client_body_in_file_only off;
+
+  # Add X-XSS-Protection for HTML documents.
+  add_header X-XSS-Protection "1; mode=block" always;
+  # Add X-Frame-Options for HTML documents.
+  add_header X-Frame-Options "SAMEORIGIN" always;
+  # Add Content-Security-Policy for HTML documents.
+  add_header Content-Security-Policy "default-src 'self'; base-uri 'none'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" always;
+  add_header X-Content-Type-Options nosniff always;
+  # Add Referrer-Policy for HTML documents.
+  add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+  # Add X-UA-Compatible for HTML documents.
+  # include configuration/internet_explorer/x-ua-compatible.conf
+
+  # Protect IP
+	limit_req_zone $binary_remote_addr zone=flood:10m rate=100r/s;
+	limit_req zone=flood burst=100 nodelay;
+
+	# Connexions maximum par ip
+	limit_conn_zone $binary_remote_addr zone=ddos:10m;
+	limit_conn ddos 100;
+
+	types_hash_max_size 2048;
+
+  # server_names_hash_bucket_size 64;
+  # server_name_in_redirect off;
+
+  # OLD config
+  #open_file_cache max=100;
+  #client_body_temp_path /tmp 1 2;
+  #client_body_buffer_size 256k;
+  #client_body_in_file_only off;
 }
 
 daemon off;
