--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -4,7 +4,7 @@ server {
     server_name nginx_host;
     client_max_body_size 20M;
 
-    root /var/www/deep-space-objects/public;
+    root /srv/app/public;
 
     location / {
         try_files $uri /index.php$is_args$args;
@@ -42,7 +42,7 @@ server {
 
     server_name nginx_host;
 
-    root /var/www/deep-space-objects/public;
+    root /srv/app/public;
 
     ## CONF
     location / {
