--- a/docker/php7-fpm/Dockerfile
+++ b/docker/php7-fpm/Dockerfile
@@ -83,10 +83,11 @@ WORKDIR /srv/app
 COPY . .
 
 RUN set -eux; \
-	composer install --prefer-dist --no-progress --no-scripts --no-interaction; \
-	composer dump-autoload --classmap-authoritative; \
-	composer symfony:dump-env dev; \
-	composer run-script post-install-cmd; \
+#	mkdir -p var/cache var/log; \
+#	composer install --prefer-dist --no-scripts --no-interaction; \
+	composer dump-autoload --classmap-authoritative ; \
+#	composer symfony:dump-env prod; \
+#	composer run-script post-install-cmd;
 	chmod +x bin/console; sync
 VOLUME /srv/app/var
 
