--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ networks:
 volumes:
     es_data:
         driver: local
+    es_plugins:
+        driver: local
     db_data: {}
 
 services:
@@ -46,8 +48,8 @@ services:
         container_name: dso_nginx
         hostname: nginx
         ports:
-            - 80:80
-            - 443:443
+            - "80:80"
+            - "443:443"
         depends_on:
             - php
         volumes:
@@ -63,21 +65,27 @@ services:
 
     # ElasticSearch
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:6.8.5
+        build:
+            context: ./docker/elasticsearch
+            dockerfile: Dockerfile
         container_name: dso_elasticsearch
         hostname: elasticsearch
         volumes:
             - es_data:/usr/share/elasticsearch/data
+            - es_plugins:/usr/share/elasticsearch/plugins
         environment:
             - cluster.name=demo
             - bootstrap.memory_lock=true
+            - http.cors.enabled=true
+            - http.cors.allow-origin=*
+            - http.cors.allow-headers=X-Requested-With,Content-Type,Content-Length,Authorization
             - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
         ulimits:
             memlock:
                 soft: -1
                 hard: -1
         ports:
-            - 9200:9200
+            - "9200:9200"
         networks:
             - dso_stack
 
@@ -95,7 +103,7 @@ services:
             - MYSQL_USER=${DB_USER}
             - MYSQL_PASSWORD=${DB_PASSWORD}
         ports:
-          - 3307:3306
+          - "3307:3306"
         networks:
           - dso_stack
 
@@ -114,7 +122,7 @@ services:
         links:
             - elasticsearch
         ports:
-            - 5601:5601
+            - "5601:5601"
         networks:
             - dso_stack
 
