Skeleton night_mode + nginx conf

--- a/docker/nginx/prod/configuration/security/content-security-policy.conf
+++ b/docker/nginx/prod/configuration/security/content-security-policy.conf
@@ -24,7 +24,7 @@
 # https://www.html5rocks.com/en/tutorials/security/content-security-policy/
 # https://www.w3.org/TR/CSP/
 
-add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ssl.google-analytics.com; base-uri 'none'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" always;
+add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' https://www.google.com 'unsafe-inline' 'unsafe-eval' https://ssl.google-analytics.com; base-uri 'none'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests" always;
 # add_header
 #  Content-Security-Policy "
 #    default-src 'self';
