--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,3 +133,11 @@ services:
         container_name: dso_memcached
         networks:
             - dso_stack
+
+    redis:
+        image: redis:latest
+        hostname: redis
+        container_name: dsl_redis
+        networks:
+            -dso_stack:
+                 -
