--- a/docker/nginx/prod/configuration/web_performance/compression.conf
+++ b/docker/nginx/prod/configuration/web_performance/compression.conf
@@ -14,18 +14,18 @@ gzip_disable "msie6"
 # 5 is a perfect compromise between size and CPU usage, offering about 75%
 # reduction for most ASCII files (almost identical to level 9).
 # Default: 1
-gzip_comp_level 7;
+gzip_comp_level 6;
 
 # Don't compress anything that's already small and unlikely to shrink much if at
 # all (the default is 20 bytes, which is bad as that usually leads to larger
 # files after gzipping).
 # Default: 20
-gzip_min_length 1100;
+gzip_min_length 80;
 
 # Compress data even for clients that are connecting to us via proxies,
 # identified by the "Via" header (required for CloudFront).
 # Default: off
-gzip_proxied any;
+gzip_proxied no-cache no-store private expired auth;
 
 # Tell proxies to cache both the gzipped and regular version of a resource
 # whenever the client's Accept-Encoding capabilities header varies;
@@ -58,12 +58,17 @@ gzip_types
   font/eot
   font/otf
   font/ttf
+  image/jpeg
+  image/png
   image/bmp
+  image/webp
+  image/x-icon
   image/svg+xml
   text/cache-manifest
   text/calendar
   text/css
   text/javascript
+  text/js
   text/markdown
   text/plain
   text/xml
