--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "copy-webpack-plugin": "^4.6.0",
         "d3-celestial": "0.6.10",
         "flatpickr": "^4.6.2",
+        "html-webpack-inline-source-plugin": "^0.0.10",
         "leaflet": "^1.5.0",
         "mobile-device-detect": "^0.4.3",
         "node-sass": "^7.0.0",
         "sass-loader": "^7.0.1",
         "sass-mq-build": "^1.0.0",
+        "save-dev": "^0.0.1-security",
         "vue": "^2.6.10",
         "vue-agile": "^0.3.7",
         "vue-backtotop": "^1.6.1",
