--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,9 +127,12 @@ services:
             - dso_stack
 
     # memcached
-    memcached:
-        image: memcached:latest
-        hostname: memcached
-        container_name: dso_memcached
+    redis:
+        image: redis:6.0-alpine
+        hostname: redis
+        container_name: dso_redis
+            - ALLOW_EMPTY_PASSWORD=yes
+        ports:
+            - '6379:6379'
         networks:
             - dso_stack
