--- a/config/elasticsearch/mappings/constellations.mapping.json
+++ b/config/elasticsearch/mappings/constellations.mapping.json
@@ -1,100 +1,82 @@
 {
   "mappings": {
-    "_doc": {
-      "properties": {
-        "id": {
-          "type": "text",
-          "fields": {
-            "raw": {
-              "type": "keyword"
-            }
+    "properties": {
+      "id": {
+        "type": "text",
+        "fields": {
+          "raw": {
+            "type": "keyword"
           }
-        },
-        "geometry": {
-          "type": "geo_shape"
-        },
-        "geometryline": {
-          "type": "geo_shape"
-        },
-        "gen": {
-          "type": "text"
-        },
-        "alt": {
-          "properties": {
-            "alt": {
-              "type": "text",
-              "fields": {
-                "en": {
-                  "type": "text",
-                  "analyzer": "english"
-                },
-                "fr": {
-                  "type": "text",
-                  "analyzer": "french"
-                },
-                "es": {
-                  "type": "text",
-                  "analyzer": "spanish"
-                },
-                "de": {
-                  "type": "text",
-                  "analyzer": "german"
-                },
-                "pt": {
-                  "type": "text",
-                  "analyzer": "portuguese"
-                },
-                "it": {
-                  "type": "text",
-                  "analyzer": "italian"
-                }
-              }
-            }
-          }
-        },
-        "description": {
-          "properties": {
-            "description": {
-              "type": "text",
-              "fields": {
-                "en": {
-                  "type": "text",
-                  "analyzer": "english"
-                },
-                "fr": {
-                  "type": "text",
-                  "analyzer": "french"
-                },
-                "es": {
-                  "type": "text",
-                  "analyzer": "spanish"
-                },
-                "de": {
-                  "type": "text",
-                  "analyzer": "german"
-                },
-                "pt": {
-                  "type": "text",
-                  "analyzer": "portuguese"
-                },
-                "it": {
-                  "type": "text",
-                  "analyzer": "italian"
-                }
-              }
-            }
-          }
-        },
-        "rank": {
-          "type": "integer"
-        },
-        "order": {
-          "type": "integer"
-        },
-        "loc": {
-          "type": "text"
         }
-      }
+      },
+      "gen": { "type": "text" },
+      "alt": {
+        "properties": {
+          "language": {
+            "type": "keyword"
+          },
+          "en": {
+            "type": "text",
+            "analyzer": "english"
+          },
+          "fr": {
+            "type": "text",
+            "analyzer": "french"
+          },
+          "es": {
+            "type": "text",
+            "analyzer": "spanish"
+          },
+          "de": {
+            "type": "text",
+            "analyzer": "german"
+          },
+          "pt": {
+            "type": "text",
+            "analyzer": "portuguese"
+          },
+          "it": {
+            "type": "text",
+            "analyzer": "italian"
+          }
+        }
+      },
+      "description": {
+        "properties": {
+          "language": {
+            "type": "keyword"
+          },
+          "en": {
+            "type": "text",
+            "analyzer": "english"
+          },
+          "fr": {
+            "type": "text",
+            "analyzer": "french"
+          },
+          "es": {
+            "type": "text",
+            "analyzer": "spanish"
+          },
+          "de": {
+            "type": "text",
+            "analyzer": "german"
+          },
+          "pt": {
+            "type": "text",
+            "analyzer": "portuguese"
+          },
+          "it": {
+            "type": "text",
+            "analyzer": "italian"
+          }
+        }
+      },
+      "rank": { "type": "integer" },
+      "order": { "type": "integer" },
+      "loc": { "type": "text" },
+      "geometry": { "type": "geo_shape" },
+      "geometryline": { "type": "geo_shape" }
     }
   }
 }
