Fix docker MySQL

--- a/.env.dist
+++ b/.env.dist
@@ -12,22 +12,9 @@ APP_SECRET=
 TRUSTED_HOSTS=localhost
 MEMCACHED_URL=memcached://memcached:11211
 REDIS_URL=redis://localhost:6379
-###< symfony/framework-bundle ###
 
-###> doctrine/doctrine-bundle ###
-DATABASE_ROOT_PASSWORD=changeme
-DATABASE_HOST=database
-DATABASE_NAME=db_name
-DATABASE_USER=db_user
-DATABASE_PASSWORD=db_password
-DATABASE_PORT=3306
-MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
-MYSQL_DATABASE=${DATABASE_NAME}
-MYSQL_USER=${DATABASE_USER}
-MYSQL_PASSWORD=${DATABASE_PASSWORD}
-DATABASE_URL="mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
-###< doctrine/doctrine-bundle ###
-# DOCKERprojectwww/deep-space-objects
+# DOCKER
+SYMFONY_APP_PATH=
 TIMEZONE=Europe/Paris
 NGINX_HOST=astro-otter.local
 SITE_UID="$(id -u)"
@@ -36,6 +23,17 @@ SSL_CERTIFICATE_CRT=/path/to/localhost.crt
 SSL_CERTIFICATE_KEY=/path/to/localhost.key
 ELK_HOST=elasticsearch
 ELK_PORT=9200
+DATABASE_ROOT_PASSWORD=changeme
+DATABASE_HOST=database
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_PORT=3306
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
+###< doctrine/doctrine-bundle ###
+
 ### > Astrobin ###
 ASTROBIN_API_KEY=PutHereYourOwnApiKey
 ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
