--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -18,7 +18,7 @@ doctrine:
         port: '%env(DATABASE_PORT)%'
         user: '%env(DATABASE_USER)%'
         password: '%env(DATABASE_PASSWORD)%'
-        dbname: '%env(DATABASE_PORT)%'
+        dbname: '%env(DATABASE_NAME)%'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
