--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,8 +117,14 @@ services:
         restart: always
         volumes:
             - db_data:/var/lib/mysql
+            - ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql
         env_file:
-            - .env
+            - ".env"
+        environment:
+            - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
+            - MYSQL_DATABASE=${DATABASE_NAME}
+            - MYSQL_USER=${DATABASE_USER}
+            - MYSQL_PASSWORD=${DATABASE_PASSWORD}
         ports:
           - "3307:3306"
         networks:
@@ -131,8 +137,6 @@ services:
 #        restart: always
 #        networks:
 #          - dso_stack
-
-
 
     # redis
     redis:
